# git-unmerged

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  requirements-dev.txt  setup.py  test_setup.sh
.github/workflows/: publish.yml  test.yml
examples/: example_usage.py
git_unmerged/: __init__.py  analyzer.py  cli.py
tests/: __init__.py  test_git_unmerged.py
