[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "git-unmerged"
version = "1.2.0"
description = "Analyze git branches to find unmerged commits with contributor tracking"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Dovron Sherbaev", email = "davronsherbaev@gmail.com"}
]
keywords = ["git", "branches", "analysis", "unmerged"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
git-unmerged = "git_unmerged.cli:main"

[project.urls]
Homepage = "https://github.com/DavraYoung/git-unmerged"
